--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script_stop: true
           script: |
-            cd /root/repos/skeleton-node-ms
+            cd /home/ubuntu/repos/auth
             git pull origin main
             docker-compose restart
             echo "ok"
